--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "devlopr jekyll blog",
-  "description": "A Jekyll Theme built for Developers",
-  "repository": "https://github.com/sujaykundu777/devlopr-jekyll",
+  "name": "guillaume blog",
+  "description": "my website",
+  "repository": "https://arsscriptum.github.io/",
   "keywords": ["jekyll", "blog"]
 }
