--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -14,8 +14,8 @@ jobs:
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         issue-message: >-
-          Thanks for submitting an issue! I'll check it at as soon as possible
+          Merci! Thanks for submitting an issue! I'll check it at as soon as possible
           and get back to you.
         pr-message: >-
-          Thanks for submitting a PR. If the PR is a valid and passes
+          Merci! Thanks for submitting a PR. If the PR is a valid and passes
           all the checks , we will approve it soon. Have a great day !
